css/style.css
/* ... */
#container-projects a:hover {
  background-color: blue;
  color:white;
}

/*shadow*/
#container-side {
  flex-flow: column;
  overflow: hidden;
}

#container-side .content {
  width: 25vw;
  min-width: 25vw;
  padding:1rem;
  /*z-index:11;*/
}

#container-side .content div{
  padding-bottom: 1rem;
}



/*to check*/
#container-side.background-blue, #container-about.background-blue {
  background-color: #0000ff;
}

#container-side.background-blue h1 , #container-about.background-blue h1{
  color: white;
}


#container-about {
  overflow-x: hidden;
  overflow-y: scroll;
}

#container-about #inside {
  padding-top: 11rem;
  padding-bottom: 11rem;
  justify-content: center;
  flex-direction: row;
  flex-wrap: wrap;
}

#container-about.reduced {
  overflow-y: hidden;
}

#container-about .content {
  width: 25vw;
  min-width: 25vw;
  padding: 1rem;
  /*min-height: 100vh;
  overflow: hidden;*/
}

#container-projects {
  flex-wrap: wrap;
  overflow-x: hidden;
  background-color: white;
}

.side {
  width: 25%;
}

.main {
  width: 75%;
}

.reduced {
  width: 0px;
}

.extended {
  width: 100%;
}

/*-----------------2nd level--------------------*/
/*Not the real title container, the one in container-side*/
#container-title {
  height:11rem;
  padding-right: 4rem  !important; /*one more than the other one*/
  padding-bottom: 5rem !important;
  visibility:hidden;
}

#container-credit {
  -ms-overflow-style: none;
  scrollbar-width: none;
  padding-top: 50px;
  overflow-y:scroll;
}

#container-menu a{
  display: block;
  padding:1rem;
  height:16.6666667vh;
  background-color: blue;
  text-decoration: none;
  color:white;
}
#container-menu a:hover{
  padding:1rem;
  height:16.6666667vh;
  background-color: white;
  color:black;
}

#container-menu.content{
  padding:0; !important /* déja un padding dans les a */
}

#container-menu a.selected {
  color :black;
  background-color: white;
}
/* FLEX RULES*/
.d-none {
  display: none !important;
}

.d-flex {
  display: flex !important;
}

.flex-top{
  flex: 0 0 auto;
}
.flex-middle {
  flex: 1 1 auto;
}
.flex-middle::-webkit-scrollbar {
  display: none;
}

.flex-bottom {
  flex: 0 0 auto;
}

iframe {
  position: absolute;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;
  min-width:75vw;
}

.move-up {
  transform: translateY(-100%);
}

.appear-up {
  transform: translateY(100%);
}

.move-down {
  transform: translateY(100%);
}

.appear-down {
  transform: translateY(-100%);
}

.noselect {
  -webkit-touch-callout: none; /* iOS Safari */
  -webkit-user-select: none; /* Safari */
  -khtml-user-select: none; /* Konqueror HTML */
  -moz-user-select: none; /* Firefox */
  -ms-user-select: none; /* Internet Explorer/Edge */
  user-select: none; /* Non-prefixed version, currently
  supported by Chrome and Opera */
}

/*3. Image */
.fit {
  /*position: absolute;*/
  width: 100%;
  height: 100%;
  left: 0px;
  top: 0px;
}
.fit-w{
  width: 100%;
  height:auto;
}
.fit img,.fit-w img {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

/*4. Percent*/
.full{
  width:100%;
  clear:both;
}
.half-w{
  width:50%;
  float:left;
}
.half-h{
  height:50%;
  float:left;
}
.half{
  /*width:25vw;*/
  width:50%;
  float:left;
}

.third-w {
  width:33.33%;
  float:left;
}

/*TIMELINES ARTEFACTS*/

.reduced #timeline-cursor{
  display:none;
}
.reduced #timeline-barre{
  display:none;
}
#timeline-cursor{
  position:absolute;
  background-color: black !important;
  left: 50%;
  width:2px;
  height:6rem; /*10vh*/
  bottom:0;
  z-index:11;
}
#timeline-barre{
  pointer-events:none;
  position:absolute;
  left: 0px;
  width:100%;
  height:6rem;
  z-index:10;
  bottom:0;
  border-top:1px solid black;
  /*background-color: :white;*/ /*new*/
  /*opacity:0;*/ /*new*/
}
.extended #timeline-barre{
  left: 0px;
  width:100%;
}
.extended #timeline-cursor{
  left: 50vw;
}
.button-timeline{
  pointer-events: auto;
  position:absolute;
  color:black;
  width:4rem;
  height:6rem;
  padding:2rem 1rem 2rem 1rem;
  stroke-width:4px;
}

/*to improve*/
#button-timeline-left{
  background-image: linear-gradient(90deg, rgba(255,255,255,1) 70%, rgba(255,255,255,0) 90%);
}
#button-timeline-right{
  right:0;
  text-align:right;
  background-image: linear-gradient(90deg, rgba(255,255,255,0) 10%,  rgba(255,255,255,1) 30%);
}

.button-timeline:hover .svgline{
  stroke:blue;
}

@media (max-width: 1500px){ /*tablet landscape*/
  #container-about .content {
    width: 50%;
    min-width:50%;
  }
  h1, .font-large{
    font-size: 2rem;
  }

  .splashscreen-title,
  .click-to-start {
    font-size: 1em;
  }
}

@media (max-width: 1300px){
  h1, .font-large{
    font-size: 1.5rem;
  }
}

@media (max-width: 800px){
  #container-about .content {
    width: 100%;
    min-width:100%;
  }
}
/* ... */

